--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "json-server": "^0.12.1",
     "node-sass": "^4.5.3",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
